Frontend/src/pages/countdown/Countdown.module.css
.wrap {
	display: flex;
	margin: 2rem auto;

	h2 {
		margin-bottom: 2rem;
	}
}

.heroContent {
	display: block;
	position: absolute;
	top: 0;
	z-index: -1;
	height: 100vh;
	width: 100%;
	overflow: hidden;
	box-shadow: -1px 3px 10px 5px
		color-mix(in srgb, var(--bg-shift-secondary), transparent 20%);

	img {
		width: 100%;
	}

	video {
		width: 100%;
		height: 100%;
		object-fit: cover;
	}
}

#heroLogo {
	height: var(--shift-logo-height);
	margin: -80px -20px -30px;
}

.rotatedText {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;

	h1 {
		font-size: 32px;
	}

	& * {
		margin: 0;
		padding: 0;
		color: var(--txt-special);
	}
}

.heroText {
	display: flex;
	flex-direction: row;

	h1 {
		font-size: 18px;
	}

	& > div:first-child {
		font-size: 1rem;
	}

	& > div:last-child {
		margin-left: 4px;
		font-size: 2rem;
	}

	.courseHeroText {
		width: fit-content;
	}

	div {
		font-weight: bold;
	}
}

.heroWrapper {
	transform: rotate(-14deg);
	margin-left: 2.5rem;
	margin-top: -0.2rem;
}

.topSpacer {
	padding-top: var(--spacing-top);
}

.timerDiv {
	width: fit-content;
	margin: 60px auto 0;
	font-weight: 800 !important;

	.cd {
		background-color: var(--bg-shift-alt);
		width: fit-content;
		padding: 5px 15px;
		margin-bottom: 8px;
		border-radius: 6px;
		border: 3px solid black;
		text-align: right;
		justify-self: right;
		text-transform: uppercase;

		span {
			font-weight: 600;
		}
	}

	.smallerCd span {
		font-size: 18px;
	}

	#timer {
		display: flex;
		flex-direction: row;
		justify-content: center;

		.timerBox {
			display: flex;
			flex-direction: column;
			color: var(--txt-shift-primary);

			& > :first-child {
				padding: 0.5rem;
				border-radius: 0.5rem;
				margin: 0 0.5rem;
				width: 2.1rem;
				aspect-ratio: 1/1;
				background-color: var(--bg-shift-secondary);
				box-shadow: 5px 5px 0 1px var(--shadow-primary);
				border: 5px solid var(--border-primary);
				font-size: 24px;
				text-align: center;
				font-weight: bold;

				span {
					font-weight: bold;
					font-size: 24px;
				}
			}

			& > :last-child {
				font-size: small;
				text-align: center;
				margin-top: 0.3rem;
			}
		}
	}
}

.linkBtn {
	display: flex;
	justify-self: center;
	width: fit-content;
	outline: none;
	-webkit-tap-highlight-color: transparent;
}

.projectSide img {
	width: 100%;
	height: auto;
}

.projectCard {
	background-color: var(--bg-shift-secondary);
	border: 5px solid var(--border-primary);
	width: 80%;
	border-radius: 0.5rem;
	padding: 1.25rem;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-self: center;
	transform: rotate(5deg);

	h2 {
		font-size: 26px;
	}

	.carouselImage {
		width: 100%;
		border-radius: 1.5rem;
		border: 5px solid var(--border-primary);
		overflow: hidden;
		aspect-ratio: 16 / 9;
	}

	.carouselSlideAnimation {
		display: flex;
		transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
		width: 100%;
		height: 100%;
	}

	.carouselSlide {
		min-width: 100%;
		height: 100%;
		flex-shrink: 0;
		box-sizing: border-box;
	}

	.cardImagePlaceholder {
		height: 100%;
		display: flex;
		align-items: center;
		justify-content: center;
		background: var(--bg-shift-alt);
	}

	.carouselDots {
		display: flex;
		justify-content: center;
		gap: 10px;
		margin-top: 0.5rem;

		button {
			box-shadow: none;
			border: 1px solid;
		}

		.dot {
			width: 18px;
			height: 18px;
			background-color: var(--bg-shift-primary);
			cursor: pointer;
			padding: 0;
			position: relative;
			transition: transform 0.1s ease;

			&::after {
				content: "";
				position: absolute;
				top: 50%;
				left: 50%;
				transform: translate(-50%, -50%);
			}

			&:active {
				transform: translate(2px, 2px);
			}
		}
	}

	.projectCTA {
		button {
			color: var(--txt-shift-primary);
			background-color: var(--bg-shift-primary);
		}
	}
}

.shiftInfoNoCard {
	text-align: left;

	.infoTitle {
		color: var(--txt-shift-primary);
		text-align: center;
	}

	.infoList {
		list-style: none;
		padding: 0;
		margin: 0;

		li {
			font-size: 18px;
			position: relative;
			color: var(--txt-shift-primary);
			margin-bottom: 1.2rem;
			padding-left: 1.5rem;

			&::before {
				content: "•";
				position: absolute;
				left: 0;
			}
		}
	}
}

.shiftTime,
.shiftLocation {
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	gap: 1.5rem;
	width: 100%;
	max-width: 320px;
	margin-left: auto;
	margin-right: auto;

	h3 {
		font-size: 20px;
	}

	> div:last-child {
		flex-grow: 1;
	}
}

.shiftTime {
	div:last-child {
		text-align: center;
	}
}

.shiftLocation {
	text-align: left;

	h3 {
		margin-bottom: 1rem;
	}
}

.iconCalendar,
.iconMap {
	width: 50px;
	height: 50px;
	flex-shrink: 0;

	img {
		width: 100%;
		height: 100%;
		object-fit: contain;
	}
}

.sectionDivider {
	border: none;
	border-top: 3px solid var(--border-primary);
	margin: 3rem auto;
	width: 100%;
}

.audienceContainer {
	display: grid;
	grid-template-columns: 1fr;
	gap: 1.5rem;
	width: 100%;
	max-width: 400px;
	margin: 0 auto;
}

.audienceCard {
	background-color: var(--bg-shift-primary);
	border: 5px solid var(--border-primary);
	border-radius: 1.5rem;
	padding: var(--margin-small);
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;

	.iconHeadphones,
	.iconPaper,
	.iconChatBubble,
	.iconStar {
		width: 60px;
		height: 60px;
		background-position: center;
		margin-bottom: 0.5rem;
		flex-shrink: 0;

		img {
			width: 100%;
			height: 100%;
			object-fit: contain;
			display: block;
		}
	}
}

.infoPart {
	display: flex;
	flex-direction: column;
	margin-bottom: 2rem;
}

.landingWrap {
	position: relative;
	display: grid;
	grid-template-rows: repeat(2, 1fr);
	height: calc(100dvh - 116px);
	gap: 50px;

	.heroLayout {
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		width: fit-content;
		position: absolute;
	}

	.timerDiv {
		display: grid;
		align-self: end;
		justify-self: end;
		margin: 50px 12.5dvw 0;
		grid-row: 2/3;

		#timer {
			.timerBox {
				color: var(--txt-special);
			}
		}

		.cta {
			margin-left: 10px;
		}
	}
}

#scrollPointer {
	position: relative;
	display: flex;
	flex-direction: column;
	height: 50px;
	width: fit-content;
	align-self: self-end;
	margin: 0 auto;
	bottom: 20px;
	animation: upDown 1.4s ease-in-out infinite;
	img {
		height: 100%;
		transform: rotate(180deg);
	}
}

.infoMultimediaCard {
	display: flex;
	flex-direction: column;
	gap: var(--margin-between);
	padding: var(--margin-between);
	background-color: var(--bg-shift-alt);
	border: 5px solid var(--border-primary);
	border-radius: 1.5rem;
	max-width: 80vw;
	justify-self: center;
	overflow: hidden;
	box-sizing: border-box;

	img {
		border: 3px solid var(--bg-shift-secondary);
		border-radius: 0.5rem;
	}
}

@media (min-width: 1024px) {
	.landingWrap {
		grid-template-columns: repeat(2, 1fr);
		height: 90dvh;
		width: 92.5dvw;
		justify-content: space-between;
		margin-top: -56px;
		margin-bottom: 4rem;
		margin-left: 0;

		.heroLayout {
			position: relative;
			max-height: 40dvh;
			#heroLogo {
				max-height: 100%;
			}
		}

		.timerDiv {
			align-self: end;
			margin-right: 0;
			grid-row: 2/3;
			grid-column: 2/3;
			margin-top: unset;
			#timer {
				margin-left: -6px;

				.timerBox {
					color: var(--txt-special);
				}
			}

			.cta {
				margin-left: 10px;
			}
		}
	}

	#scrollPointer {
		display: block;
		position: absolute;
		height: 50px;
		width: fit-content;
		left: 50%;
		bottom: 0;
		animation: upDown 1.4s ease-in-out infinite;
	}

	#heroLogo {
		margin: 0 -30px -80px;
	}

	.rotatedText h1 {
		margin-top: 0.5rem;
		font-size: 44px;
	}

	.heroText {
		margin-left: 1rem;

		h1 {
			font-size: 28px;
		}

		& > div:first-child {
			font-size: 2rem;
		}

		& > div:last-child {
			margin-left: 4px;
			font-size: 4rem;
		}
	}

	.timerDiv .cd,
	.timerDiv .cta {
		text-align: left;
		justify-self: left;
	}

	.sectionFlexer {
		display: flex;
		justify-content: space-between;
		margin-bottom: var(--spacing-m);
	}

	.previewSection {
		padding: calc(3 * var(--spacing-top)) 0 var(--spacing-top);
	}

	.projectSide,
	.shiftInfoSide {
		width: 45%;
		align-self: center;
	}

	.projectCard {
		width: 460px;
		max-width: 100%;
		justify-self: flex-end;
	}

	.shiftInfoNoCard {
		text-align: left;

		.infoTitle {
			text-align: left;
			font-size: 44px;
		}
	}

	.leftInfoSide,
	.rightInfoSide {
		width: 40%;
	}

	.audienceContainer {
		display: grid;
		grid-template-columns: repeat(4, 1fr);
		gap: 2rem;
		width: 100%;
		max-width: 1200px;
		margin: 0 auto;
	}

	.audienceCard {
		&:nth-child(odd) {
			transform: rotate(5deg);
		}

		&:nth-child(even) {
			transform: rotate(-5deg);
		}
	}

	.infoSection {
		display: flex;
		flex-direction: column;
		gap: 70px;
	}

	.infoPart {
		flex-direction: row;
		height: fit-content;
		min-height: 10rem;
		justify-content: center;
		margin: var(--spacing-s) 0;
		gap: 5%;
		margin: 0 auto;

		hr.sectionDivider {
			align-self: stretch;
			width: 1px;
			border: none;
			border-left: 3px solid var(--border-primary);
			margin: 0;
		}
	}

	.infoMultimediaCard {
		max-width: 50vw;
	}
}

/*@media only screen and (min-width: 1280px) {*/
/*    .rotatedText h1 {*/
/*        margin-top: 0;*/
/*    }*/
/*}*/

@media (min-width: 1500px) {
	.infoMultimediaCard {
		gap: 2rem;
	}
}

@keyframes upDown {
	0%,
	100% {
		transform: translateY(0);
	}

	50% {
		transform: translateY(10px);
	}
}

